Escher CMS Change History
=========================

Changes Since Last Release
	added missing semicolons in some inline styles of sample site
	eliminated one level of directory hierachy in sparkplug directory
	.htaccess: moved use of header directive inside check for enabled headers module

Version 0.9.0 [2010-11-20]
	Initial Release
	Requires Spark/Plug v1.0.0